# inference-client

./: .gitignore  .openspec-todo-config.yml  AGENTS.md  README.md  pyproject.toml  pytest.ini  requirements.txt
.devcontainer/: devcontainer.json  env.dist
.github/workflows/: build-and-validate.yml  tests.yml
docs/: openspec-todo-workflow.md
openspec/: AGENTS.md  project.md
openspec/changes/2026-01-16-add-ovh-provider/: tasks.md
openspec/changes/add-ollama-provider/: tasks.md
openspec/changes/add-openai-provider/: proposal.md  tasks.md
openspec/changes/add-pip-packaging/: proposal.md  tasks.md
openspec/changes/archive/2026-01-13-add-ollama-provider/: proposal.md  tasks.md
openspec/changes/archive/2026-01-15-add-azure-openai-provider/: proposal.md  tasks.md
openspec/changes/archive/2026-01-20-add-ovh-provider/: proposal.md  tasks.md
openspec/changes/archive/2026-01-20-add-pip-packaging/: design.md
openspec/specs/azure-openai-provider/: spec.md
openspec/specs/ollama-provider/: spec.md
openspec/specs/ovh-provider/: spec.md
openspec/specs/packaging/: spec.md
scripts/: validate-todo-workflow.sh
src/inference_client/: __init__.py  client.py  exceptions.py
src/inference_client/base/: __init__.py  provider.py  types.py
src/inference_client/providers/: __init__.py
tests/: test_client.py
tests/providers/: test_azure_openai_integration.py  test_azure_openai_provider.py  test_ollama_integration.py  test_ollama_provider.py  test_openai_integration.py  test_openai_provider.py  test_ovh_integration.py  test_ovh_provider.py
(+14 files in other folders)
