[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "inference-client"
dynamic = ["version"]
description = "A Python library that provides one unified API to call different inference providers"
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
authors = [
    {name = "Laura Birch"},
    {name = "Mads D. Kristensen"}
]
keywords = ["ai", "inference", "llm", "machine learning", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "ollama>=0.1.0",
    "openai>=1.0.0"
]

dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "build>=0.10.0",
    "check-wheel-contents>=0.4.0",
    "twine>=4.0.0",
]

all = [
    "inference-client[dev]"
]

[tool.setuptools_scm]
write_to = "src/inference_client/_version.py"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"